istio-fleetman/_course_files/2 Traffic - Starting Files/6-istio-rules.yaml
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: fleetman-staff-service # Name could be anything
  namespace: default
spec:
  hosts:
    - fleetman-staff-service.default.svc.cluster.local # The Service DNS host in K8S
  http:
    - route:
        - destination:
            host: fleetman-staff-service.default.svc.cluster.local # The Target DNS name
            subset: safe # Subset points to destination rules subset
          weight: 0
        - destination:
            host: fleetman-staff-service.default.svc.cluster.local # The Target DNS name
            subset: risky # Subset points to destination rules subset
          weight: 100
---
# Describe subsets by using label in each pod with different versions
kind: DestinationRule
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: fleetman-staff-service
  namespace: default
spec:
  host: fleetman-staff-service.default.svc.cluster.local
  subsets:
    - labels:
        version: safe
      name: safe
    - labels:
        version: risky
      name: risky
